--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 blogleft contact text-xs-center">
-          <form id="contactform" action="https://formspree.io/f/xoqyakel" method="POST">
+          <form id="contactform" action="https://formspree.io/f/xzzpqype" method="POST">
             <h3 class="contactTitle">Contact</h3>
             <!-- <br> -->
             <p>Feel free to get in touch with me via social media or by sending me a message below.</p>
