--- a/about.html
+++ b/about.html
@@ -86,15 +86,15 @@
             </li>
             <li>
               <i class="ai ai-google-scholar"></i>
-              <a href="https://scholar.google.com/citations?user=2kCEk3MAAAAJ" target="_blank">My Google Scholar page</a>
+              <a href="https://scholar.google.com/citations?hl=en&user=MA4R8yIAAAAJ&scilu=&scisig=AJY4_hMAAAAAZuelRGZXt1tqp13YbXiZX6TDFW0&gmla=ALUCkoUSt1jgPc-bdBzGpM8LBZ-iHJ8N6o8Z-hv26t24Wf0v3ZoDZNJ-F39DTeKBdNimAiJe0Q4jpL_Djc2aNYooSrfyFNgWwNRWJQk&sciund=5286529447340997468" target="_blank">My Google Scholar page</a>
             </li>
             <li>
               <i class="fa fa-github"></i>
-              <a href="https://github.com/suresh-pokharel" target="_blank">suresh-pokharel</a>
+              <a href="https://kumar-neupane.github.io/" target="_blank"><kumar-neupane></kumar-neupane></a>
             </li>
             <li>
               <i class="fa fa-linkedin"></i>
-              <a href="https://www.linkedin.com/in/suresh-pokharel/" target="_blank">suresh-pokharel</a>
+              <a href="https://www.linkedin.com/in/kumar-neupane-686a57251//" target="_blank">kumar-neupane</a>
             </li>
           </ul>
         </div>
