--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             </li>
             <li>
               <i class="fa fa-github"></i>
-              <a href="https://kumar-neupane.github.io//" target="_blank"><kumar-neupane></kumar-neupane></a>
+              <a href="https://kumar-neupane.github.io/" target="_blank">Kumar Neupane</a>
             </li>
             <li>
               <i class="fa fa-linkedin"></i>
