added new header

--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,22 @@
          Journal of Nepal Physical Society, (2022).
           <span class="paper-type-journal">journal</span></p>
       </li>
+      <li>
+        <p><a href="https://www.samikshapublication.com.np/MCQs-in-Physics" target="_blank">
+          MCQs in Physics Volume-1
+        </a>
+           <span class="authors">G.P. Adhikari, Kumar Neupane, Ujwal Lamsal.</span>
+         Samiksha Publication, (2022).
+          <span class="paper-type-book">book</span></p>
+      </li>
+      <li>
+        <p><a href="https://www.samikshapublication.com.np/MCQs%20in%20Physics%20Volume-II" target="_blank">
+          MCQs in Physics Volume-II
+        </a>
+           <span class="authors">G.P. Adhikari, Kumar Neupane, Ujwal Lamsal.</span>
+         Samiksha Publication, (2022).
+          <span class="paper-type-book">book</span></p>
+      </li>
 
     </ol>
 
