--- a/publications.html
+++ b/publications.html
@@ -46,9 +46,9 @@
       </li>
       <li>
         <p><a href="https://www.samikshapublication.com.np/MCQs-in-Physics" target="_blank">
-          MCQs in Physics Volume-1
+          MCQs in Physics Volume-I
         </a>
-           <span class="authors">G.P. Adhikari, Kumar Neupane, Ujwal Lamsal.</span>
+           <span class="authors">G.P. Adhikari, <strong>Kumar Neupane</strong>, Ujwal Lamsal.</span>
          Samiksha Publication, (2022).
           <span class="paper-type-book">book</span></p>
       </li>
@@ -56,7 +56,7 @@
         <p><a href="https://www.samikshapublication.com.np/MCQs%20in%20Physics%20Volume-II" target="_blank">
           MCQs in Physics Volume-II
         </a>
-           <span class="authors">G.P. Adhikari, Kumar Neupane, Ujwal Lamsal.</span>
+           <span class="authors">G.P. Adhikari, <strong>Kumar Neupane</strong>, Ujwal Lamsal.</span>
          Samiksha Publication, (2022).
           <span class="paper-type-book">book</span></p>
       </li>
