--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
           <!--About content start -->
           <div class="clearfix" style="text-align: justify;">
             <h3 class="text-xs-center">About Kumar:</h3>
-            <p>Kumar Neupane is a Ph.D. student in Physics at <a href="https://www.mtu.edu/" target="_blank">Michigan Technological University</a>, focusing on nanotechnology and thin-film solar cells. Under the guidance of Professor Yap, whose research encompasses the synthesis, characterization, and application of quantum materials and nanomaterials, Kumar is exploring innovative strategies to enhance solar cell efficiency.</p>
+            <p>Kumar Neupane is a Ph.D. student in Physics at <a href="https://www.mtu.edu/" target="_blank">Michigan Technological University</a>, focusing on nanotechnology and thin-film solar cells. Under the guidance of  <a href="https://www.mtu.edu/physics/department/faculty/yap/" target="_blank">Professor Yap</a> Professor Yap, whose research encompasses the synthesis, characterization, and application of quantum materials and nanomaterials, Kumar is exploring innovative strategies to enhance solar cell efficiency.</p>
 
             <p>His research delves into the fundamentals of B-C-N nanostructures, including carbon nitride, boron, and boron carbon-nitride, as well as transition metal dichalcogenides (TMDCs) and zinc oxide (ZnO). Kumar is particularly interested in how these materials can be integrated into thin-film solar cells to improve their performance and sustainability.</p>
             
