--- a/achievement-and-participations.html
+++ b/achievement-and-participations.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Your Name</title>
+      <title>Dr. Sagar Bhattarai - Achievements and Participations</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/bootstrap.css">
       <link rel="stylesheet" href="css/style.css">
@@ -24,10 +24,12 @@
          <div class="row content publications" style="padding-left: 0;">
             <ul>
                <p class="contactTitle text-xs-center">Achievements and Participations</p>
-               <li>Presented a talk entitled “Topological analysis of optical phase elements”, Michigan Technological University, Houghton, MI</li>
-               <li>Participated in a poster at Department of Physics Spring 2022 Poster Session, Michigan Technological University, Houghton, MI</li>
-               <li>Participated in Virtual ICTP/SISSA Seminar entitled “Low-temperature chaos and the quantum effects of curvature” by Dr. Silvia Pappalardi (Post Doc, Ecole Normale Supérieure (ENS), Paris) April 15, 2021.</li>
-               <li>Participated in an online research talk entitled “Superconducting Radio Frequency Cavities and their Application in the Modern Particle Accelerator” by Dr. Pashupati Dhakal, staff scientist, Jefferson Lab, USA, July 11, 2020.</li>
+               <li>Presented a talk on “A novel graded approach for improving the efficiency of lead-free perovskite solar cells” at the Solar Energy conference, 2022.</li>
+               <li>Co-authored over 50 research papers, with contributions in top-tier journals such as Solar Energy, IEEE Transactions on Electron Devices, and Materials Today Communication.</li>
+               <li>Published book: "The Physics of Perovskite Solar Cells: Materials and Characterizations" (Notion Press).</li>
+               <li>Participated as a guest speaker at international webinars on solar energy and optoelectronics.</li>
+               <li>Collaborated with renowned institutions like IIT Guwahati and NIT Arunachal Pradesh on research projects funded by DST-SERB.</li>
+               <li>Engaged in multiple research projects focused on solar energy, receiving grants for innovative solar cell design and optimization techniques.</li>
             </ul>
          </div>
       </div>
