--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <div class="row content">
             <!--About image start-->
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <img src="images/dr-sagar-bhattarai.jpg" title="Dr. Sagar Bhattarai" class="img-responsive" alt="Dr. Sagar Bhattarai">
+                <img src="images/b.jpg" title="Dr. Sagar Bhattarai" class="img-responsive" alt="Dr. Sagar Bhattarai">
             </div>
             <!--About image end-->
             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
