--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <div class="row content">
             <!--About image start-->
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <img src="images/b.jpg" title="Dr. Sagar Bhattarai" class="img-responsive" alt="Dr. Sagar Bhattarai">
+                <img src="images/dr-sagar-bhattarai.jpg" alt="Dr. Sagar Bhattarai" title="Dr. Sagar Bhattarai" class="img-responsive">
             </div>
             <!--About image end-->
             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
@@ -19,29 +19,32 @@
                 <div class="about-content" style="text-align: justify;">
                     <h3>About Dr. Sagar Bhattarai</h3>
                     <p>
-                        Dr. Sagar Bhattarai is a dedicated post-doctoral researcher at the prestigious 
+                        Dr. Sagar Bhattarai is a distinguished scientist, researcher, and innovator at the 
                         <a href="https://www.iitg.ac.in/" target="_blank">Indian Institute of Technology Guwahati</a>, 
-                        currently ranked 364 in the QS World University Rankings 2024. His research focuses on cutting-edge advancements 
-                        in photovoltaic devices, particularly in perovskite solar cells, organic light-emitting diodes, 
-                        and mathematical modeling. Dr. Bhattarai has made significant contributions to the field of optoelectronics, 
-                        exploring materials such as III-V inorganic compounds, quantum dots, and quantum wells.
+                        where he focuses on cutting-edge photovoltaic and perovskite solar cell technologies. 
+                        He holds a Ph.D. from the National Institute of Technology Arunachal Pradesh, and has 
+                        previously served as the Head of the Physics Department at Arunachal University of Studies.
                     </p>
                     <p>
-                        With a Ph.D. from the National Institute of Technology (NIT) Arunachal Pradesh, where he investigated 
-                        perovskite materials for solar cell applications, Dr. Bhattarai has been actively involved in both 
-                        theoretical and practical research in renewable energy technologies. His academic journey also includes 
-                        roles as an Assistant Professor and Head of the Physics Department at Arunachal University of Studies, India.
+                        Classified as one of the world’s top 2% scientists by Stanford University (2024), 
+                        Dr. Bhattarai has contributed extensively to the field of renewable energy, publishing 
+                        over 50 research papers in top-tier journals. His work involves the development of 
+                        high-efficiency solar cells, which are critical for the advancement of sustainable 
+                        energy solutions.
                     </p>
                     <p>
-                        Dr. Bhattarai’s extensive research, backed by numerous peer-reviewed publications in top journals, delves 
-                        into innovative strategies to enhance the efficiency and sustainability of solar cells. He has co-authored 
-                        over 50 scientific papers and collaborated on multiple research projects, focusing on optimizing perovskite 
-                        materials and device architectures for improved solar cell performance.
+                        He is also an editor at Springer Nature, and his research focuses on innovative approaches 
+                        in optoelectronics and solar energy materials. Dr. Bhattarai is passionate about using his 
+                        expertise to tackle global energy challenges.
                     </p>
                     <p>
-                        Dr. Bhattarai is driven by his passion for sustainable energy solutions and aims to push the boundaries of 
-                        current solar technologies. His commitment to both academic excellence and practical innovations positions 
-                        him as a key figure in the future of renewable energy research.
+                        Dr. Bhattarai completed his early education at Pub Kamrup College and Sipajhar HS & MP School. 
+                        He currently resides in Guwahati, Assam, where he continues to drive significant research 
+                        efforts in solar energy technologies.
+                    </p>
+                    <p>
+                        For more details, you can explore his works on 
+                        <a href="https://researchgate.net/profile/Sagar-Bhattarai-2" target="_blank">ResearchGate</a>.
                     </p>
                 </div>
                 <!--About content end-->
