--- a/about.html
+++ b/about.html
@@ -93,11 +93,11 @@
             </li>
             <li>
               <i class="fa fa-github"></i>
-              <a href="https://github.com/sgrbhattarai11" target="_blank" style="display: inline-block; color: blue; text-decoration: underline;">GitHub Profile</a>
+              <a href="https://sagar-bhattarai1.github.io/" target="_blank" style="display: inline-block; color: blue; text-decoration: underline;">GitHub Profile</a>
             </li>
             <li>
               <i class="fa fa-linkedin"></i>
-              <a href="https://www.linkedin.com/in/sgrbhattarai11" target="_blank">LinkedIn Profile</a>
+              <a href="https://in.linkedin.com/in/dr-sagar-bhattarai-0818b61b5" target="_blank">LinkedIn Profile</a>
             </li>
           </ul>
         </div>
