--- a/about.html
+++ b/about.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html>
   <head>
@@ -38,6 +36,10 @@
             <p>He is also an editor at Springer Nature, and his research focuses on innovative approaches in optoelectronics and solar energy materials. Dr. Bhattarai is passionate about using his expertise to tackle global energy challenges.</p>
 
             <p>Dr. Bhattarai completed his early education at Pub Kamrup College and Sipajhar HS & MP School. He currently resides in Guwahati, Assam, where he continues to drive significant research efforts in solar energy technologies.</p>
+            <!-- Added ResearchGate and Resume Link -->
+            <a href="https://www.researchgate.net/profile/Sagar-Bhattarai-2" target="_blank" class="dl">View My ResearchGate</a>
+            <br><br>
+            <a href="https://docs.google.com/document/d/1dIquDqiUdGKGhw3WKkEnBi9OMcOP_3z-/edit" target="_blank" class="dl">View My Resume</a>
           </div>
           <!--About content start -->
         </div>
@@ -50,7 +52,6 @@
         <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 blogleft contact text-xs-center">
           <form id="contactform" action="https://formspree.io/f/xzzpqype" method="POST">
             <h3 class="contactTitle">Contact</h3>
-            <!-- <br> -->
             <p>Feel free to get in touch with me via social media or by sending a message below.</p>
             <!--contact form start-->
             <div class="row conrow">
@@ -93,11 +94,11 @@
             </li>
             <li>
               <i class="fa fa-github"></i>
-              <a href="https://sagar-bhattarai1.github.io/" target="_blank" style="display: inline-block; color: blue; text-decoration: underline;">GitHub Profile</a>
+              <a href="https://github.com/sgrbhattarai11" target="_blank" style="display: inline-block; color: blue; text-decoration: underline;">GitHub Profile</a>
             </li>
             <li>
               <i class="fa fa-linkedin"></i>
-              <a href="https://in.linkedin.com/in/dr-sagar-bhattarai-0818b61b5" target="_blank">LinkedIn Profile</a>
+              <a href="https://www.linkedin.com/in/sgrbhattarai11" target="_blank">LinkedIn Profile</a>
             </li>
           </ul>
         </div>
@@ -123,8 +124,3 @@
     <script src="dist/js/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
-
-
-
-
-             
