--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
             </li>
             <li>
               <i class="fa fa-linkedin"></i>
-              <a href="https://www.linkedin.com/in/sgrbhattarai11" target="_blank">LinkedIn Profile</a>
+              <a href="https://www.linkedin.com/in/dr-sagar-bhattarai-0818b61b5/" target="_blank">LinkedIn Profile</a>
             </li>
           </ul>
         </div>
