--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             <p>He is also an editor at Springer Nature, and his research focuses on innovative approaches in optoelectronics and solar energy materials. Dr. Bhattarai is passionate about using his expertise to tackle global energy challenges.</p>
 
             <p>Dr. Bhattarai completed his early education at Pub Kamrup College and Sipajhar HS & MP School. He currently resides in Guwahati, Assam, where he continues to drive significant research efforts in solar energy technologies.</p>
-            <a href="https://iitg.ac.in/tihue/assets/images/postdoc/Dr.%20Sagar%20CV.pdf" target="_blank" class="dl">View My Resume</a>
+            <a href="https://drive.google.com/drive/home" target="_blank" class="dl">View My Resume</a>
           </div>
           <!--About content start -->
         </div>
