--- a/publications.html
+++ b/publications.html
@@ -1,36 +1,81 @@
-<h2>Recent Publications</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            line-height: 1.6;
+        }
 
-<ol>
-  <li>
-    <strong>Exclusive optimization techniques for Cesium based perovskite solar cell for the efficiency increment</strong><br>
-    <em>Authors</em>: Sagar Bhattarai, Pratap Kumar Dakua, Mohd Zahid Ansari, Usen Dudekula, Rahul Pandey, Ismail Hossain, Ayman A. Ghfar<br>
-    <a href="https://link.springer.com/article/10.1007/s12596-024-02026-2">Link to article</a>
-  </li>
-  <li>
-    <strong>Chlorine-doped perovskite materials for highly efficient perovskite solar cell design offering an efficiency of nearly 29%</strong><br>
-    <em>Authors</em>: Sagar Bhattarai, Rahul Pandey, Jaya Madan, Mohd Zahid Ansari, M. Khalid Hossain, Mongi Amami, Shaik Hasane Ahammad, Ahmed Nabih Zaki Rashed<br>
-    <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/pip.3732">Link to article</a>
-  </li>
-  <li>
-    <strong>Designing a more efficient CsSnI3 based perovskite solar cell with novel bio-synthesized ZnO-NP as ETL</strong><br>
-    <em>Author</em>: Sagar Bhattarai<br>
-    <a href="https://www.sciencedirect.com/science/article/pii/S0254058424003948">Link to article</a>
-  </li>
-  <li>
-    <strong>Performance improvement of HTL-free perovskite solar cells with the graded approach by numerical simulation</strong><br>
-    <em>Authors</em>: Sagar Bhattarai, M. Khalid Hossain, Jaya Madan, Rahul Pandey, D.P. Samajdar, Mohd Zahid Ansari, Ismail Hossain, Safa Ezzine, Mongi Amami<br>
-    <a href="https://www.sciencedirect.com/science/article/pii/S002236972300481X">Link to article</a>
-  </li>
-  <li>
-    <strong>Bio-synthesized ZnO in cesium based perovskite solar cells: A pathway to sustainable high efficiency</strong><br>
-    <em>Authors</em>: Sagar Bhattarai, Mustafa K.A. Mohammed, Ismail Hossain, Pratap Kumar Dakua, Rahul Pandey, Jaya Madan<br>
-    <a href="https://www.sciencedirect.com/science/article/pii/S0038109824002485">Link to article</a>
-  </li>
-  <li>
-    <strong>Enhancement of efficiency in CsSnI3 based perovskite solar cell by numerical modeling of graphene oxide as HTL and ZnMgO as ETL</strong><br>
-    <em>Authors</em>: Sagar Bhattarai, M. Khalid Hossain, Rahul Pandey, Jaya Madan, D.P. Samajdar, Mithun Chowdhury, Md. Ferdous Rahman, Mohd Zahid Ansari, Munirah D. Albaqami<br>
-    <a href="https://www.cell.com/heliyon/fulltext/S2405-8440(24)00138-5">Link to article</a>
-  </li>
-</ol>
+        h2 {
+            font-size: 28px;
+        }
 
-<p>View my full list of 60+ publications on <a href="https://scholar.google.com/citations?user=1Y2FB0wAAAAJ&hl=en&oi=ao">Google Scholar</a></p>
+        ol {
+            padding-left: 20px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #000;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+            text-decoration: none;
+            color: black;
+            border: 2px solid black;
+            border-radius: 5px;
+            margin-top: 20px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: black;
+            color: white;
+        }
+    </style>
+    <title>Recent Publications</title>
+</head>
+<body>
+
+    <h2>Recent Publications</h2>
+
+    <ol>
+        <li>
+            <a href="https://link.springer.com/article/10.1007/s12596-024-02026-2">Exclusive optimization techniques for Cesium based perovskite solar cell for the efficiency increment</a><br>
+            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, Pratap Kumar Dakua, Mohd Zahid Ansari, Usen Dudekula, Rahul Pandey, Ismail Hossain, Ayman A. Ghfar
+        </li>
+        <li>
+            <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/pip.3732">Chlorine-doped perovskite materials for highly efficient perovskite solar cell design offering an efficiency of nearly 29%</a><br>
+            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, Rahul Pandey, Jaya Madan, Mohd Zahid Ansari, M. Khalid Hossain, Mongi Amami, Shaik Hasane Ahammad, Ahmed Nabih Zaki Rashed
+        </li>
+        <li>
+            <a href="https://www.sciencedirect.com/science/article/pii/S0254058424003948">Designing a more efficient CsSnI3 based perovskite solar cell with novel bio-synthesized ZnO-NP as ETL</a><br>
+            <em>Author</em>: <strong>Sagar Bhattarai</strong>
+        </li>
+        <li>
+            <a href="https://www.sciencedirect.com/science/article/pii/S002236972300481X">Performance improvement of HTL-free perovskite solar cells with the graded approach by numerical simulation</a><br>
+            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, M. Khalid Hossain, Jaya Madan, Rahul Pandey, D.P. Samajdar, Mohd Zahid Ansari, Ismail Hossain, Safa Ezzine, Mongi Amami
+        </li>
+        <li>
+            <a href="https://www.sciencedirect.com/science/article/pii/S0038109824002485">Bio-synthesized ZnO in cesium based perovskite solar cells: A pathway to sustainable high efficiency</a><br>
+            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, Mustafa K.A. Mohammed, Ismail Hossain, Pratap Kumar Dakua, Rahul Pandey, Jaya Madan
+        </li>
+        <li>
+            <a href="https://www.cell.com/heliyon/fulltext/S2405-8440(24)00138-5">Enhancement of efficiency in CsSnI3 based perovskite solar cell by numerical modeling of graphene oxide as HTL and ZnMgO as ETL</a><br>
+            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, M. Khalid Hossain, Rahul Pandey, Jaya Madan, D.P. Samajdar, Mithun Chowdhury, Md. Ferdous Rahman, Mohd Zahid Ansari, Munirah D. Albaqami
+        </li>
+    </ol>
+
+    <a href="https://scholar.google.com/citations?user=1Y2FB0wAAAAJ&hl=en&oi=ao" class="button" target="_blank">VIEW MY FULL PUBLICATIONS</a>
+
+</body>
+</html>
