--- a/publications.html
+++ b/publications.html
@@ -1,81 +1,120 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            line-height: 1.6;
-        }
+<meta charset="utf-8">
+<title>Sagar Bhattarai</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/flexslider.css">
+<link href='https://fonts.googleapis.com/css?family=Lato:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/component.css">
+<script src="js/modernizr.custom.js"></script>
+<script src="js/load_project.js" type="text/javascript"></script>
+<script src="js/loader_htmls.js"></script>
+<style>
+    .button {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 18px;
+        font-weight: bold;
+        text-align: center;
+        text-decoration: none;
+        color: black;
+        border: 2px solid black;
+        border-radius: 5px;
+        margin-top: 20px;
+        transition: background-color 0.3s ease, color 0.3s ease;
+    }
 
-        h2 {
-            font-size: 28px;
-        }
-
-        ol {
-            padding-left: 20px;
-        }
-
-        a {
-            text-decoration: none;
-            color: #000;
-        }
-
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 18px;
-            font-weight: bold;
-            text-align: center;
-            text-decoration: none;
-            color: black;
-            border: 2px solid black;
-            border-radius: 5px;
-            margin-top: 20px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        .button:hover {
-            background-color: black;
-            color: white;
-        }
-    </style>
-    <title>Recent Publications</title>
+    .button:hover {
+        background-color: black;
+        color: white;
+    }
+</style>
 </head>
+
 <body>
 
-    <h2>Recent Publications</h2>
+<!-- Import header -->
+<div data-include="header"></div>
+<div class="container">
+  <div class="row content publications" style="padding-left: 0; margin-right:10px;">
 
-    <ol>
-        <li>
-            <a href="https://link.springer.com/article/10.1007/s12596-024-02026-2">Exclusive optimization techniques for Cesium based perovskite solar cell for the efficiency increment</a><br>
-            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, Pratap Kumar Dakua, Mohd Zahid Ansari, Usen Dudekula, Rahul Pandey, Ismail Hossain, Ayman A. Ghfar
-        </li>
-        <li>
-            <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/pip.3732">Chlorine-doped perovskite materials for highly efficient perovskite solar cell design offering an efficiency of nearly 29%</a><br>
-            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, Rahul Pandey, Jaya Madan, Mohd Zahid Ansari, M. Khalid Hossain, Mongi Amami, Shaik Hasane Ahammad, Ahmed Nabih Zaki Rashed
-        </li>
-        <li>
-            <a href="https://www.sciencedirect.com/science/article/pii/S0254058424003948">Designing a more efficient CsSnI3 based perovskite solar cell with novel bio-synthesized ZnO-NP as ETL</a><br>
-            <em>Author</em>: <strong>Sagar Bhattarai</strong>
-        </li>
-        <li>
-            <a href="https://www.sciencedirect.com/science/article/pii/S002236972300481X">Performance improvement of HTL-free perovskite solar cells with the graded approach by numerical simulation</a><br>
-            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, M. Khalid Hossain, Jaya Madan, Rahul Pandey, D.P. Samajdar, Mohd Zahid Ansari, Ismail Hossain, Safa Ezzine, Mongi Amami
-        </li>
-        <li>
-            <a href="https://www.sciencedirect.com/science/article/pii/S0038109824002485">Bio-synthesized ZnO in cesium based perovskite solar cells: A pathway to sustainable high efficiency</a><br>
-            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, Mustafa K.A. Mohammed, Ismail Hossain, Pratap Kumar Dakua, Rahul Pandey, Jaya Madan
-        </li>
-        <li>
-            <a href="https://www.cell.com/heliyon/fulltext/S2405-8440(24)00138-5">Enhancement of efficiency in CsSnI3 based perovskite solar cell by numerical modeling of graphene oxide as HTL and ZnMgO as ETL</a><br>
-            <em>Authors</em>: <strong>Sagar Bhattarai</strong>, M. Khalid Hossain, Rahul Pandey, Jaya Madan, D.P. Samajdar, Mithun Chowdhury, Md. Ferdous Rahman, Mohd Zahid Ansari, Munirah D. Albaqami
-        </li>
+    <ol reversed>
+    <p class="contactTitle text-xs-center">Publications</p>
+
+      <div class="hr-sect">2024</div>
+      <li>
+        <p><a href="https://link.springer.com/article/10.1007/s12596-024-02026-2" target="_blank">
+          Exclusive optimization techniques for Cesium based perovskite solar cell for the efficiency increment
+        </a>
+           <span class="authors"><strong>Sagar Bhattarai</strong>, Pratap Kumar Dakua, Mohd Zahid Ansari, Usen Dudekula, Rahul Pandey, Ismail Hossain, Ayman A. Ghfar.</span>
+         Springer, (2024).
+          <span class="paper-type-journal">journal</span></p>
+      </li>
+      
+      <li>
+        <p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/pip.3732" target="_blank">
+          Chlorine-doped perovskite materials for highly efficient perovskite solar cell design offering an efficiency of nearly 29%
+        </a>
+           <span class="authors"><strong>Sagar Bhattarai</strong>, Rahul Pandey, Jaya Madan, Mohd Zahid Ansari, M. Khalid Hossain, Mongi Amami, Shaik Hasane Ahammad, Ahmed Nabih Zaki Rashed.</span>
+         Wiley, (2024).
+          <span class="paper-type-journal">journal</span></p>
+      </li>
+
+      <li>
+        <p><a href="https://www.sciencedirect.com/science/article/pii/S0254058424003948" target="_blank">
+          Designing a more efficient CsSnI3 based perovskite solar cell with novel bio-synthesized ZnO-NP as ETL
+        </a>
+           <span class="authors"><strong>Sagar Bhattarai</strong>.</span>
+         ScienceDirect, (2024).
+          <span class="paper-type-journal">journal</span></p>
+      </li>
+
+      <div class="hr-sect">2023</div>
+      <li>
+        <p><a href="https://www.sciencedirect.com/science/article/pii/S002236972300481X" target="_blank">
+          Performance improvement of HTL-free perovskite solar cells with the graded approach by numerical simulation
+        </a>
+           <span class="authors"><strong>Sagar Bhattarai</strong>, M. Khalid Hossain, Jaya Madan, Rahul Pandey, D.P. Samajdar, Mohd Zahid Ansari, Ismail Hossain, Safa Ezzine, Mongi Amami.</span>
+         ScienceDirect, (2023).
+          <span class="paper-type-journal">journal</span></p>
+      </li>
+
+      <li>
+        <p><a href="https://www.sciencedirect.com/science/article/pii/S0038109824002485" target="_blank">
+          Bio-synthesized ZnO in cesium based perovskite solar cells: A pathway to sustainable high efficiency
+        </a>
+           <span class="authors"><strong>Sagar Bhattarai</strong>, Mustafa K.A. Mohammed, Ismail Hossain, Pratap Kumar Dakua, Rahul Pandey, Jaya Madan.</span>
+         ScienceDirect, (2023).
+          <span class="paper-type-journal">journal</span></p>
+      </li>
+
+      <li>
+        <p><a href="https://www.cell.com/heliyon/fulltext/S2405-8440(24)00138-5" target="_blank">
+          Enhancement of efficiency in CsSnI3 based perovskite solar cell by numerical modeling of graphene oxide as HTL and ZnMgO as ETL
+        </a>
+           <span class="authors"><strong>Sagar Bhattarai</strong>, M. Khalid Hossain, Rahul Pandey, Jaya Madan, D.P. Samajdar, Mithun Chowdhury, Md. Ferdous Rahman, Mohd Zahid Ansari, Munirah D. Albaqami.</span>
+         Cell, (2024).
+          <span class="paper-type-journal">journal</span></p>
+      </li>
+
     </ol>
 
     <a href="https://scholar.google.com/citations?user=1Y2FB0wAAAAJ&hl=en&oi=ao" class="button" target="_blank">VIEW MY FULL PUBLICATIONS</a>
+
+  </div>
+</div>
+
+<!-- Import footer -->
+<div data-include="footer"></div>
+
+<!--Javascriptfile start -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
 
 </body>
 </html>
