--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <div class="row content">
         <!--About image start -->
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 cl">
-          <img src="images/latest/sagar-bhattarai.jpeg" title="Dr. Sagar Bhattarai" class="img-responsive" alt="Dr. Sagar Bhattarai" style="opacity:0.8;">
+          <img src="images/latest/c.jpeg" title="Dr. Sagar Bhattarai" class="img-responsive" alt="Dr. Sagar Bhattarai" style="opacity:0.8;">
         </div>
         <!--About image start -->
         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 cr">
