--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@
           Performance improvement of HTL-free perovskite solar cells with the graded approach by numerical simulation
         </a>
         <span class="authors"><strong>Sagar Bhattarai</strong>, M. Khalid Hossain, Jaya Madan, Rahul Pandey, D.P. Samajdar, Mohd Zahid Ansari, Ismail Hossain, Safa Ezzine, Mongi Amami.</span>
-        ScienceDirect, (2023).
+        ScienceDirect, (2024).
         <span class="paper-type-journal">journal</span></p>
     </li>
 
@@ -86,7 +86,7 @@
           Bio-synthesized ZnO in cesium based perovskite solar cells: A pathway to sustainable high efficiency
         </a>
         <span class="authors"><strong>Sagar Bhattarai</strong>, Mustafa K.A. Mohammed, Ismail Hossain, Pratap Kumar Dakua, Rahul Pandey, Jaya Madan.</span>
-        ScienceDirect, (2023).
+        ScienceDirect, (2024).
         <span class="paper-type-journal">journal</span></p>
     </li>
 
@@ -101,7 +101,7 @@
 
     </ol>
 
-    <a href="https://scholar.google.com/citations?user=1Y2FB0wAAAAJ&hl=en&oi=ao" class="button" target="_blank">VIEW MY FULL PUBLICATIONS</a>
+    <a href="https://scholar.google.com/citations?user=1Y2FB0wAAAAJ&hl=en&oi=ao" class="button" target="_blank">VIEW MY FULL 60+ PUBLICATIONS</a>
 
   </div>
 </div>
