--- a/publications.html
+++ b/publications.html
@@ -21,16 +21,22 @@
         font-weight: bold;
         text-align: center;
         text-decoration: none;
-        color: black;
-        border: 2px solid black;
+        color: white;
+        background-color: #4CAF50; /* Green color */
+        border: 2px solid #4CAF50; /* Green border */
         border-radius: 5px;
         margin-top: 20px;
         transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     .button:hover {
-        background-color: black;
-        color: white;
+        background-color: white;
+        color: #4CAF50;
+    }
+
+    .button-container {
+        text-align: center;
+        margin-top: 30px;
     }
 </style>
 </head>
@@ -77,7 +83,7 @@
           Performance improvement of HTL-free perovskite solar cells with the graded approach by numerical simulation
         </a>
         <span class="authors"><strong>Sagar Bhattarai</strong>, M. Khalid Hossain, Jaya Madan, Rahul Pandey, D.P. Samajdar, Mohd Zahid Ansari, Ismail Hossain, Safa Ezzine, Mongi Amami.</span>
-        ScienceDirect, (2024).
+        ScienceDirect, (2023).
         <span class="paper-type-journal">journal</span></p>
     </li>
 
@@ -86,7 +92,7 @@
           Bio-synthesized ZnO in cesium based perovskite solar cells: A pathway to sustainable high efficiency
         </a>
         <span class="authors"><strong>Sagar Bhattarai</strong>, Mustafa K.A. Mohammed, Ismail Hossain, Pratap Kumar Dakua, Rahul Pandey, Jaya Madan.</span>
-        ScienceDirect, (2024).
+        ScienceDirect, (2023).
         <span class="paper-type-journal">journal</span></p>
     </li>
 
@@ -101,7 +107,9 @@
 
     </ol>
 
-    <a href="https://scholar.google.com/citations?user=1Y2FB0wAAAAJ&hl=en&oi=ao" class="button" target="_blank">VIEW MY FULL 60+ PUBLICATIONS</a>
+    <div class="button-container">
+      <a href="https://scholar.google.com/citations?user=1Y2FB0wAAAAJ&hl=en&oi=ao" class="button" target="_blank">VIEW MY FULL 60+ PUBLICATIONS</a>
+    </div>
 
   </div>
 </div>
