--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,65 @@
-<footer class="footer navbar-fixed-bottom">
-  <div class="container">
-    <ul class="list-unstyled footerLink">
-      <!-- <li><a href="about.html">About</a></li> -->
-      <!-- <li><a href="projects.html">Projects</a></li> -->
-    </ul>
-    <p class="copyrightText">&copy; Sagar Bhattarai</p>
-  </div>
+
+<!-- Footer Section -->
+<footer class="footer">
+    <div class="container">
+        <h3>Media Coverage</h3>
+        <p>Check out my interviews and social media coverage:</p>
+
+        <div class="social-icons">
+            <a href="https://www.youtube.com/watch?app=desktop&v=854QCf_DwPU" target="_blank">
+                <i class="fa fa-youtube-play"></i> YouTube Interview
+            </a>
+            <a href="https://www.facebook.com/assamtalkslive/videos/326320497208984/" target="_blank">
+                <i class="fa fa-facebook"></i> Facebook Interview
+            </a>
+        </div>
+
+        <p>&copy; 2024 Sagar Bhattarai. All rights reserved.</p>
+    </div>
 </footer>
+
+<!-- Footer CSS Styling -->
+<style>
+    .footer {
+        background-color: #333;
+        color: white;
+        padding: 40px 0;
+        text-align: center;
+    }
+
+    .footer a {
+        color: #4CAF50;
+        text-decoration: none;
+        margin: 0 10px;
+        transition: color 0.3s ease;
+    }
+
+    .footer a:hover {
+        color: #fff;
+    }
+
+    .footer h3 {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .social-icons a {
+        font-size: 20px;
+        margin: 0 15px;
+        color: white;
+    }
+
+    .social-icons a:hover {
+        color: #4CAF50;
+    }
+
+    .footer p {
+        margin: 20px 0 10px;
+        font-size: 16px;
+    }
+
+    .social-icons i {
+        margin-right: 8px;
+    }
+</style>
+
