--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,3 @@
-
 <!-- Footer Section -->
 <footer class="footer">
     <div class="container">
@@ -21,45 +20,48 @@
 <!-- Footer CSS Styling -->
 <style>
     .footer {
-        background-color: #333;
-        color: white;
+        background-color: #f8f9fa; /* Light background color */
+        color: #333; /* Darker text for readability */
         padding: 40px 0;
         text-align: center;
+        border-top: 1px solid #dee2e6; /* Subtle border */
     }
 
     .footer a {
-        color: #4CAF50;
+        color: #007bff; /* Link color (blue) */
         text-decoration: none;
-        margin: 0 10px;
+        font-weight: bold;
+        margin: 0 15px;
         transition: color 0.3s ease;
     }
 
     .footer a:hover {
-        color: #fff;
+        color: #0056b3; /* Darker blue on hover */
     }
 
     .footer h3 {
         font-size: 24px;
         margin-bottom: 20px;
+        color: #000; /* Darker heading color */
     }
 
     .social-icons a {
         font-size: 20px;
         margin: 0 15px;
-        color: white;
+        color: #007bff;
     }
 
     .social-icons a:hover {
-        color: #4CAF50;
+        color: #0056b3; /* Hover effect on icons */
     }
 
     .footer p {
         margin: 20px 0 10px;
         font-size: 16px;
+        color: #333; /* Regular text color */
     }
 
     .social-icons i {
         margin-right: 8px;
     }
 </style>
-
