--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 <footer class="footer">
     <div class="container">
         <h3>Media Coverage</h3>
-        <p>Check out my interviews and social media coverage:</p>
+        <p>Check out my interviews and social media presence:</p>
 
         <div class="social-icons">
             <a href="https://www.youtube.com/watch?app=desktop&v=854QCf_DwPU" target="_blank">
@@ -13,6 +13,18 @@
             </a>
         </div>
 
+        <div class="social-icons">
+            <a href="https://www.facebook.com/story.php?story_fbid=3837373476540387&id=100008033171309&_rdr" target="_blank">
+                <i class="fa fa-facebook"></i> Facebook Story 1
+            </a>
+            <a href="https://www.facebook.com/?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D3836862793258122%26id%3D100008033171309&_rdr" target="_blank">
+                <i class="fa fa-facebook"></i> Facebook Story 2
+            </a>
+            <a href="https://www.facebook.com/story.php?story_fbid=927490626063008&id=100064062369322&_rdr" target="_blank">
+                <i class="fa fa-facebook"></i> Facebook Story 3
+            </a>
+        </div>
+
         <p>&copy; 2024 Sagar Bhattarai. All rights reserved.</p>
     </div>
 </footer>
@@ -20,15 +32,15 @@
 <!-- Footer CSS Styling -->
 <style>
     .footer {
-        background-color: #f8f9fa; /* Light background color */
-        color: #333; /* Darker text for readability */
+        background-color: #f8f9fa; /* Light background */
+        color: #333; /* Dark text for readability */
         padding: 40px 0;
         text-align: center;
-        border-top: 1px solid #dee2e6; /* Subtle border */
+        border-top: 1px solid #dee2e6; /* Subtle top border */
     }
 
     .footer a {
-        color: #007bff; /* Link color (blue) */
+        color: #007bff; /* Link color */
         text-decoration: none;
         font-weight: bold;
         margin: 0 15px;
@@ -36,29 +48,39 @@
     }
 
     .footer a:hover {
-        color: #0056b3; /* Darker blue on hover */
+        color: #0056b3; /* Hover color */
     }
 
     .footer h3 {
         font-size: 24px;
         margin-bottom: 20px;
-        color: #000; /* Darker heading color */
+        color: #000; /* Darker heading */
+    }
+
+    .social-icons {
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     .social-icons a {
-        font-size: 20px;
-        margin: 0 15px;
+        font-size: 18px;
+        margin: 10px;
+        display: inline-block;
         color: #007bff;
+        padding: 10px 20px;
+        background-color: #e9ecef;
+        border-radius: 5px;
+        transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     .social-icons a:hover {
-        color: #0056b3; /* Hover effect on icons */
+        background-color: #007bff;
+        color: #fff; /* Invert text color on hover */
     }
 
     .footer p {
         margin: 20px 0 10px;
         font-size: 16px;
-        color: #333; /* Regular text color */
     }
 
     .social-icons i {
