--- a/footer.html
+++ b/footer.html
@@ -2,27 +2,24 @@
 <footer class="footer">
     <div class="container">
         <h3>Media Coverage</h3>
-        <p>Check out my interviews and social media presence:</p>
+        <p>Check out my interviews and social media coverage:</p>
 
+        <!-- Social Icons and Links -->
         <div class="social-icons">
+            <!-- YouTube Interview Link -->
             <a href="https://www.youtube.com/watch?app=desktop&v=854QCf_DwPU" target="_blank">
                 <i class="fa fa-youtube-play"></i> YouTube Interview
             </a>
-            <a href="https://www.facebook.com/assamtalkslive/videos/326320497208984/" target="_blank">
-                <i class="fa fa-facebook"></i> Facebook Interview
-            </a>
-        </div>
 
-        <div class="social-icons">
-            <a href="https://www.facebook.com/story.php?story_fbid=3837373476540387&id=100008033171309&_rdr" target="_blank">
-                <i class="fa fa-facebook"></i> Facebook Story 1
-            </a>
-            <a href="https://www.facebook.com/?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D3836862793258122%26id%3D100008033171309&_rdr" target="_blank">
-                <i class="fa fa-facebook"></i> Facebook Story 2
-            </a>
-            <a href="https://www.facebook.com/story.php?story_fbid=927490626063008&id=100064062369322&_rdr" target="_blank">
-                <i class="fa fa-facebook"></i> Facebook Story 3
-            </a>
+            <!-- Facebook Interviews Dropdown with Multiple Stories -->
+            <div class="facebook-section">
+                <i class="fa fa-facebook"></i> Facebook Interview
+                <ul class="facebook-links">
+                    <li><a href="https://www.facebook.com/story.php?story_fbid=3837373476540387&id=100008033171309&_rdr" target="_blank">Facebook Story 1</a></li>
+                    <li><a href="https://www.facebook.com/?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D3836862793258122%26id%3D100008033171309&_rdr" target="_blank">Facebook Story 2</a></li>
+                    <li><a href="https://www.facebook.com/story.php?story_fbid=927490626063008&id=100064062369322&_rdr" target="_blank">Facebook Story 3</a></li>
+                </ul>
+            </div>
         </div>
 
         <p>&copy; 2024 Sagar Bhattarai. All rights reserved.</p>
@@ -32,15 +29,15 @@
 <!-- Footer CSS Styling -->
 <style>
     .footer {
-        background-color: #f8f9fa; /* Light background */
-        color: #333; /* Dark text for readability */
+        background-color: #f8f9fa; /* Light background color */
+        color: #333; /* Darker text for readability */
         padding: 40px 0;
         text-align: center;
-        border-top: 1px solid #dee2e6; /* Subtle top border */
+        border-top: 1px solid #dee2e6; /* Subtle border */
     }
 
     .footer a {
-        color: #007bff; /* Link color */
+        color: #007bff; /* Link color (blue) */
         text-decoration: none;
         font-weight: bold;
         margin: 0 15px;
@@ -48,42 +45,64 @@
     }
 
     .footer a:hover {
-        color: #0056b3; /* Hover color */
+        color: #0056b3; /* Darker blue on hover */
     }
 
     .footer h3 {
         font-size: 24px;
         margin-bottom: 20px;
-        color: #000; /* Darker heading */
+        color: #000; /* Darker heading color */
     }
 
     .social-icons {
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin: 20px 0;
     }
 
     .social-icons a {
-        font-size: 18px;
-        margin: 10px;
-        display: inline-block;
+        font-size: 20px;
+        margin: 0 15px;
         color: #007bff;
-        padding: 10px 20px;
-        background-color: #e9ecef;
-        border-radius: 5px;
-        transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     .social-icons a:hover {
-        background-color: #007bff;
-        color: #fff; /* Invert text color on hover */
+        color: #0056b3; /* Hover effect on icons */
+    }
+
+    .social-icons i {
+        margin-right: 8px;
+    }
+
+    .facebook-section {
+        display: inline-block;
+        margin-top: 15px;
+    }
+
+    .facebook-section i {
+        margin-right: 5px;
+    }
+
+    .facebook-section ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 10px 0 0 0;
+    }
+
+    .facebook-section ul li {
+        margin: 5px 0;
+    }
+
+    .facebook-section ul li a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    .facebook-section ul li a:hover {
+        color: #0056b3;
     }
 
     .footer p {
         margin: 20px 0 10px;
         font-size: 16px;
-    }
-
-    .social-icons i {
-        margin-right: 8px;
+        color: #333;
     }
 </style>
